# coverage_playground

./: CMakeLists.txt  README.md  app1.cpp  app2.cpp  main.cpp
cmake/: CodeCoverage_clang.cmake  CodeCoverage_gcc13.cmake  CodeCoverage_gcc14.cmake
coverage_reports/gcc-13.3.0/: index.functions.html  index.html  index.main.cpp.118fcbaaba162ba17933c7893247df3a.html
coverage_reports/gcc-14.2.0/: index.functions.html  index.html  index.main.cpp.118fcbaaba162ba17933c7893247df3a.html
